# my_paper

./: CITATION.cff  README.md  _config.yml  pyproject.toml
